# hackernews_analytics

./: README.md  example.py  main.py  pull_six_months.py  pyproject.toml  questions.md  requirements.txt  save_data.py
docs/: task_description.md
hackernews/: __init__.py  client.py  data_puller.py  models.py  utils.py
notebooks/: eda.ipynb
