[project]
name = "hn-gh-pull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "aiohttp>=3.10.0",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "dask[complete]>=2025.10.0",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "ipywidgets>=8.1.7",
    "jupyterlab-widgets>=3.0.15",
    "scipy>=1.16.2",
    "wordcloud>=1.9.4",
]
